--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for makertificate",
   "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +25,10 @@
   "devDependencies": {
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "jimp": "^0.22.12",
+    "slugify": "^1.6.6"
   }
 }
